fix disalignment in users profile

--- a/src/styles/User.scss
+++ b/src/styles/User.scss
@@ -22,5 +22,8 @@
       align-items: center;
       margin: 2rem 0;
     }
+    .user-color {
+      justify-content: space-around;
+    }
   }
 }
